WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285624
IPInt->BBQ OSR should count exceptions in try blocks
https://bugs.webkit.org/show_bug.cgi?id=285624
Summary
IPInt->BBQ OSR should count exceptions in try blocks
daniel_liu4
Reported
2025-01-08 11:24:53 PST
When creating the stackmap for IPInt->BBQ OSR, try clauses were not being counted, meaning that we would not allocate enough space for rethrow slots.
rdar://142475036
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-01-08 11:40:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38740
EWS
Comment 2
2025-01-08 13:49:15 PST
Committed
288612@main
(2b8c7ef00c7f): <
https://commits.webkit.org/288612@main
> Reviewed commits have been landed. Closing PR #38740 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug