IPInt->BBQ OSR should count exceptions in try blocks https://bugs.webkit.org/show_bug.cgi?id=285624 rdar://142475036

Reviewed by Yusuke Suzuki.

When setting up our stack map, BBQ did not consider try clauses, meaning that we
would not allocate enough space for the rethrow slots in IPInt.

* JSTests/wasm/stress/bbq-osr-with-exceptions.js: Added.
(instantiate):
(async let):
* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJITImpl::ControlData::implicitSlots const):
(JSC::Wasm::BBQJITImpl::BBQJIT::exception):

Canonical link: https://commits.webkit.org/288612@main